syntax = "proto3";

package bazil.control;

import "bazil.org/bazil/server/wire/peer.proto";

option go_package = "wire";

message PeerAddRequest {
  // Must be exactly 32 bytes long.
  bytes pub = 2;
}

message PeerAddResponse {
}

message PeerLocationSetRequest {
  // Must be exactly 32 bytes long.
  bytes pub = 1;
  string netloc = 2;
}

message PeerLocationSetResponse {
}

message PeerStorageAllowRequest {
  // Must be exactly 32 bytes long.
  bytes pub = 1;
  bazil.peer.PeerStorage backends = 2;
}

message PeerStorageAllowResponse {
}
